force-app/main/default/objects/LoteActualizado__e/LoteActualizado__e.object-meta.xml
<CustomObject>
    <label>Lote Actualizado</label>
    <pluralLabel>Lotes Actualizados</pluralLabel>
</CustomObject>