force-app/main/default/objects/LoteActualizado__e/fields/Cepa__c.field-meta.xml
<CustomField>
    <fullName>Cepa__c</fullName>
    <label>Cepa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>