force-app/main/default/objects/LoteActualizado__e/fields/Eficiencia_Biologica__c.field-meta.xml
<CustomField>
    <fullName>Eficiencia_Biologica__c</fullName>
    <label>Eficiencia Biologica</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>