force-app/main/default/objects/LoteActualizado__e/fields/Estado_Nuevo__c.field-meta.xml
<CustomField>
    <fullName>Estado_Nuevo__c</fullName>
    <label>Estado Nuevo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>