force-app/main/default/objects/LoteActualizado__e/fields/Ignia_Id__c.field-meta.xml
<CustomField>
    <fullName>Ignia_Id__c</fullName>
    <label>Ignia Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>