force-app/main/default/objects/LoteActualizado__e/fields/Lote_Id__c.field-meta.xml
<CustomField>
    <fullName>Lote_Id__c</fullName>
    <label>Lote Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>